# events-face

./: manage.py  pyproject.toml
src/: sqlite3.db  urls.py
src/auth_app/: serializers.py  urls.py  views.py
src/core/: settings.py
src/events/: admin.py  filters.py  models.py  notification_client.py  notification_worker.py  pagination.py  serializers.py  urls.py  views.py
src/events/migrations/: 0001_initial.py
src/sync/: client.py  models.py  services.py
src/sync/management/commands/: sync_events.py
